--- a/social-proof-section-master/index.html
+++ b/social-proof-section-master/index.html
@@ -15,7 +15,8 @@ body{
       display: flex;
       margin-top: 90px;
       margin-left: 6%;
-      < !--i divived the main in two section,
+      <!--
+      i divived the main in two section,
       this is the first section,
       i divided the first section into two divs,
       one div contains the heading and paragraph and i gave it a class called "firstdiv"
